--- a/.github/workflows/windows-build.yml
+++ b/.github/workflows/windows-build.yml
@@ -26,7 +26,7 @@ jobs:
         run: flutter config --enable-windows-desktop
 
       - name: Build Windows app
-        run: flutter build windows
+        run: flutter build windows --release
 
       - name: Upload build artifact
         uses: actions/upload-artifact@v4
